# mkworld-tracker

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  start.sh  test_race_rank.py
scripts/: audit_track_select.py  backfill_match_records.py  backfill_vote_frames.py  generate_table.py  seed_demo_match.py  test_match_image.py  test_match_results_image.py
src/mktracker/: debug_config.py  discord_webhook.py  gemini_client.py  gemini_match_results.py  gemini_rank.py  gemini_results.py  lorenzi_text.py  main.py  match_record.py  state_machine.py  table_generator.py  team_scoring.py
src/mktracker/capture/: video_source.py
src/mktracker/detection/: __init__.py  match_results.py  match_settings.py  player_reader.py  race_finish.py  race_rank.py  race_result.py  race_results.py  track_select.py  tracks.py  vote_banner.py
src/mktracker/ui/: main_window.py  match_history.py
testdata/: track_names.txt
tests/: conftest.py  test_debug_placements.py  test_match_record.py  test_match_results.py  test_player_reader.py  test_race_finish.py  test_race_results.py  test_state_machine_persistence.py  test_table_generator.py  test_team_scoring.py  test_track_select.py
