[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mktracker"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "opencv-python>=4.9",
    "pytesseract>=0.3.10",
]

[project.scripts]
mktracker = "mktracker.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mktracker"]
